--- a/Aaminaad.mw
+++ b/Aaminaad.mw
@@ -1,3 +1,126 @@
 Diin rumaysad awood sare iyo hannaan akhaaq, ku dhaqan, iyo qaddarin oo la xiriira rumaysadkaas.
 
 [[Category:Diin]]
+
+[[af:Religie]]
+[[als:Religion]]
+[[an:Relichión]]
+[[ar:ديانة]]
+[[ast:Relixón]]
+[[ay:Yupaychäwi]]
+[[az:Din]]
+[[bar:Religion]]
+[[bat-smg:Viera]]
+[[be:Рэлігія]]
+[[be-x-old:Рэлігія]]
+[[bg:Религия]]
+[[bm:Diinɛ]]
+[[bn:ধর্ম]]
+[[br:Relijion]]
+[[bs:Religija]]
+[[ca:Religió]]
+[[ceb:Relihiyon]]
+[[cs:Náboženství]]
+[[csb:Religijô]]
+[[cv:Тĕн]]
+[[cy:Crefydd]]
+[[da:Religion]]
+[[de:Religion]]
+[[el:Θρησκεία]]
+[[en:Religion]]
+[[eo:Religio]]
+[[es:Religión]]
+[[et:Religioon]]
+[[eu:Erlijio]]
+[[fa:دین]]
+[[fi:Uskonto]]
+[[fo:Átrúnaður]]
+[[fr:Religion]]
+[[fur:Religjon]]
+[[fy:Religy]]
+[[ga:Creideamh]]
+[[gl:Relixión]]
+[[ha:Addini]]
+[[he:דת]]
+[[hi:धर्म]]
+[[hr:Religija]]
+[[ht:Relijyon]]
+[[hu:Vallás]]
+[[hy:Կրոն]]
+[[ia:Religion]]
+[[id:Agama]]
+[[io:Religio]]
+[[is:Trúarbrögð]]
+[[it:Religione]]
+[[ja:宗教]]
+[[jbo:lijda]]
+[[jv:Agama]]
+[[ka:რელიგია]]
+[[kab:Ajjed]]
+[[kg:Lukwikilu]]
+[[ko:종교]]
+[[ku:Ol]]
+[[kw:Kryjyans]]
+[[ky:Дин]]
+[[la:Religio]]
+[[lad:Relijion]]
+[[lb:Relioun]]
+[[li:Religie]]
+[[lij:Religion]]
+[[lo:ສາດສະໜາ]]
+[[lt:Religija]]
+[[lv:Reliģija]]
+[[mk:Религија]]
+[[ml:മതം]]
+[[mn:Шашин]]
+[[mr:धर्म]]
+[[ms:Agama]]
+[[mt:Reliġjon]]
+[[nah:Teōmatiliztli]]
+[[nap:Religgione]]
+[[nds:Religion]]
+[[nds-nl:Geleuf]]
+[[nl:Religie]]
+[[nn:Religion]]
+[[no:Religion]]
+[[nov:Religione]]
+[[oc:Religions]]
+[[os:Дин]]
+[[pa:ਧਰਮ]]
+[[pl:Religia]]
+[[pms:Religion]]
+[[ps:مذهب]]
+[[pt:Religião]]
+[[qu:Iñiy]]
+[[rm:Religiun]]
+[[ro:Religie]]
+[[ru:Религия]]
+[[sa:धर्म]]
+[[sc:Religione]]
+[[scn:Riliggiuni]]
+[[sco:Releegion]]
+[[sh:Religija]]
+[[simple:Religion]]
+[[sk:Náboženstvo]]
+[[sl:Religija]]
+[[sq:Feja]]
+[[sr:Религија]]
+[[ss:Lukholo]]
+[[sv:Religion]]
+[[sw:Dini]]
+[[tg:Дин]]
+[[th:ศาสนา]]
+[[tl:Pananampalataya]]
+[[tpi:Lotu]]
+[[tr:Din]]
+[[uk:Релігія]]
+[[uz:Din]]
+[[vec:Rełijon]]
+[[vi:Tôn giáo]]
+[[vo:Rel]]
+[[wa:Rilidjons]]
+[[wo:Bunt:Diine]]
+[[yi:רעליגיע]]
+[[zh:宗教]]
+[[zh-min-nan:Chong-kàu]]
+[[zh-yue:宗教]]
