--- a/Category:Diin.mw
+++ b/Category:Diin.mw
@@ -1,3 +1,89 @@
 Caqiido: 
 Waa wax rumayn ama wax aaminid.
 Caqiidada Islaamka: Waa rumaynta diinta islaamka.
+
+[[af:Kategorie:Religie]]
+[[ar:تصنيف:ديانات]]
+[[ast:Categoría:Relixón]]
+[[be:Катэгорыя:Рэлігія]]
+[[bg:Категория:Религия]]
+[[br:Rummad:Relijion]]
+[[bs:Kategorija:Religija]]
+[[cs:Kategorie:Náboženství]]
+[[cv:Категори:Тěнсем]]
+[[cy:Categori:Crefyddau]]
+[[da:Kategori:Religion]]
+[[de:Kategorie:Religion]]
+[[el:Κατηγορία:Θρησκεία]]
+[[en:Category:Religion]]
+[[eo:Kategorio:Religio]]
+[[es:Categoría:Religión]]
+[[et:Kategooria:Religioon]]
+[[fi:Luokka:Uskonto]]
+[[fo:Bólkur:Átrúnaður]]
+[[fr:Catégorie:Religion]]
+[[frp:Category:Religion]]
+[[fur:Categorie:Religjon]]
+[[fy:Kategory:Religy]]
+[[ga:Catagóir:Reiligiún]]
+[[gl:Category:Relixión]]
+[[he:קטגוריה:דתות]]
+[[hr:Kategorija:Religija]]
+[[ht:Category:Relijyon]]
+[[hu:Kategória:Vallás]]
+[[ia:Categoria:Religion]]
+[[id:Kategori:Agama]]
+[[io:Category:Religii]]
+[[is:Flokkur:Trúarbrögð]]
+[[it:Categoria:Religione]]
+[[ja:Category:宗教]]
+[[jbo:Category:lijda]]
+[[jv:Kategori:Agama]]
+[[ka:კატეგორია:რელიგია]]
+[[ko:분류:종교]]
+[[ku:Kategorî:Ol]]
+[[kw:Category:Cryjyans]]
+[[la:Categoria:Religiones]]
+[[lad:Category:Relijion]]
+[[lb:Category:Relioun]]
+[[li:Kategorie:Religie]]
+[[lmo:Category:Religjun e credeenz]]
+[[ln:Category:Relijió]]
+[[lt:Kategorija:Religija]]
+[[lv:Kategorija:Reliģija]]
+[[ms:Kategori:Agama]]
+[[mt:Category:Reliġjon]]
+[[nah:Categoría:Teotlamatiliztli]]
+[[nap:Categoria:Religgione]]
+[[nds:Kategorie:Religion]]
+[[nds-nl:Categorie:Religie]]
+[[nl:Categorie:Religie]]
+[[nn:Kategori:Religion og livssyn]]
+[[no:Kategori:Religion]]
+[[oc:Categoria:Religion]]
+[[os:Категори:Дин]]
+[[pa:ਸ਼੍ਰੇਣੀ:ਧਰਮ]]
+[[pl:Kategoria:Religie]]
+[[pt:Categoria:Religião]]
+[[ro:Categorie:Religie]]
+[[ru:Категория:Религия]]
+[[scn:Category:Riliggiuni]]
+[[sh:Category:Religija]]
+[[sk:Kategória:Náboženstvo]]
+[[sl:Kategorija:Religija]]
+[[sq:Category:Feja]]
+[[sr:Категорија:Религија]]
+[[sv:Kategori:Religion]]
+[[sw:Category:Dini]]
+[[th:หมวดหมู่:ศาสนา]]
+[[tl:Category:Relihiyon]]
+[[tr:Kategori:Din]]
+[[tt:Törkem:Din]]
+[[uk:Категорія:Релігія]]
+[[vi:Thể loại:Tôn giáo]]
+[[wa:Categoreye:Rilidjons]]
+[[war:Category:Relihiyon]]
+[[zh:Category:宗教]]
+[[zh-classical:Category:宗教]]
+[[zh-min-nan:Category:Chong-kàu]]
+[[zh-yue:Category:宗教]]
