*Empty MediaWiki Message*

--- a/Aaminaad.mw
+++ b/Aaminaad.mw
@@ -1,3 +1,5 @@
+[[Image:Religious syms.svg|thumb|Diimaha.<br />1. [[Masiixiyad]], [[Yuhuuda]], [[Hinduism]] <br />   2. [[Islaam]], [[Buddhism]], [[Shinto]] </br /> 3. [[Sikhism|Sikh]], [[Baha'i]], [[Jainism]].]]
+
 Diin rumaysad awood sare iyo hannaan akhaaq, ku dhaqan, iyo qaddarin oo la xiriira rumaysadkaas.
 
 [[Category:Diin]]
