*Empty MediaWiki Message*

--- a/Masiixiyad.mw
+++ b/Masiixiyad.mw
@@ -1,4 +1,4 @@
-===Masiixiyad===
+[[Image:Codex Bruchsal 1 01v cropped.jpg|thumb|[[Sayid Ciise Masiix]]]]
  
 [[Masiixiyad]] (carabi مسيحية) [[Kiristaan]] ama [[Kirishtaan]] waa [[Diin]] ka mid ah saddexda diimood ee samaawiga ah. Labada kale waa [[Islaam]] iyo [[Yuhuudiyah]]. Saddexdooduba nebi Ibraahim ayay ku abtirsadaan.
 
