[[ang:Nīwu Gecȳþnes]]

--- a/Axdiga_Cusub.mw
+++ b/Axdiga_Cusub.mw
@@ -2,3 +2,85 @@ Axdiga Cusub waa qaybta labaad ee baybalka oo ka ka kooban 27 cutub.
 Waxa ugu horreeya afarta injiilood oo isugu xiga sidatan: Mateeyos, Maarkos, Luuqa, iyo Yooxannaa. Ka dibna Hawlihii Rasuullada iyo 14 dhambaal oo uu Paulos diray iyo 7 dhambaal oo ay qaar kale qoreen ayaa la raaciyey. Waxa intaas dheer cutubka Muujintii oo lagu xiray.
 
 Muddo saddex qarni ah ayey qaadatay in 27kaas qoraal laga xusho qoraalladii jiray oo markaa hal buug laga dhigo.
+
+[[ang:Nīwu Gecȳþnes]]
+[[ar:عهد جديد]]
+[[ast:Nuevu Testamentu]]
+[[bat-smg:Naujāsis Testamėnts]]
+[[bg:Нов завет]]
+[[bn:নতুন বাইবেল]]
+[[br:Testamant Nevez]]
+[[bs:Novi Zavjet]]
+[[cdo:Sĭng-iók Séng-gĭng]]
+[[cs:Nový zákon]]
+[[cy:Y Testament Newydd]]
+[[da:Det Nye Testamente]]
+[[de:Neues Testament]]
+[[el:Καινή Διαθήκη]]
+[[en:New Testament]]
+[[eo:Nova testamento]]
+[[es:Nuevo Testamento]]
+[[et:Uus Testament]]
+[[eu:Itun Berria]]
+[[fa:عهد جدید]]
+[[fi:Uusi testamentti]]
+[[fj:Na Veiyalayalati Vou]]
+[[fr:Nouveau Testament]]
+[[fur:Gnûf testament]]
+[[gl:Novo Testamento]]
+[[hak:Sîn-yok Sṳn-kîn]]
+[[he:הברית החדשה]]
+[[hi:नया नियम]]
+[[hr:Novi zavjet]]
+[[hsb:Nowy Zakoń]]
+[[ht:Nouvo Testaman]]
+[[hu:Újszövetség]]
+[[hy:Նոր Կտակարան]]
+[[ia:Nove Testamento]]
+[[id:Perjanjian Baru]]
+[[it:Nuovo Testamento]]
+[[ja:新約聖書]]
+[[kk:Жаңа келсім]]
+[[kn:ಹೊಸ ಒಡಂಬಡಿಕೆ]]
+[[ko:신약성서]]
+[[ky:Жаңы Осуят]]
+[[lt:Naujasis Testamentas]]
+[[mg:Testamenta Vaovao]]
+[[mi:Kawenata Hou]]
+[[ml:പുതിയനിയമം]]
+[[mn:Шинэ Гэрээ]]
+[[my:ဓမ္မသစ္‌က္ယမ္‌း]]
+[[nds:Nieg Testament]]
+[[nds-nl:Ni'je Testement]]
+[[nl:Nieuwe Testament]]
+[[nn:Det nye testamentet]]
+[[no:Det nye testamente]]
+[[nrm:Nouvé testament]]
+[[pl:Nowy Testament]]
+[[pt:Novo Testamento]]
+[[ro:Noul Testament]]
+[[ru:Новый Завет]]
+[[scn:Novu Tistamentu]]
+[[sco:New Testament]]
+[[se:Ođđa Testameanta]]
+[[sg:Ngbele Testament]]
+[[sh:Novi zavjet]]
+[[simple:New Testament]]
+[[sk:Nový zákon]]
+[[sl:Nova zaveza]]
+[[sm:'O le Feagaiga Fou]]
+[[sq:Besëlidhja e Re]]
+[[sr:Нови завет]]
+[[sv:Nya Testamentet]]
+[[sw:Agano Jipya]]
+[[ta:புதிய ஏற்பாடு]]
+[[th:พันธสัญญาใหม่]]
+[[tl:Bagong Tipan]]
+[[tpi:Nupela Testamen]]
+[[tr:Yeni Ahit]]
+[[ug:New Testament]]
+[[uk:Новий Заповіт]]
+[[vi:Tân Ước]]
+[[yi:ברית החדשה]]
+[[zh:新約聖經]]
+[[zh-min-nan:Sin-iok Sèng-keng]]
