*Empty MediaWiki Message*

--- a/Masiixiyad.mw
+++ b/Masiixiyad.mw
@@ -837,7 +837,7 @@ Ugu dambayntiina waxaan akhristow kugu boorrinayaa inay towbaddu weli kuu furan 
 
 *[http://www.worldscriptures.org/pages/somali.html Biblia]
 
-[[Category:Diin]]
+[[Category:Masiixiyad]]
 
 [[af:Christendom]]
 [[als:Christentum]]
