*Empty MediaWiki Message*

--- a/Axdiga_Cusub.mw
+++ b/Axdiga_Cusub.mw
@@ -3,6 +3,9 @@ Waxa ugu horreeya afarta injiilood oo isugu xiga sidatan: Mateeyos, Maarkos, Luu
 
 Muddo saddex qarni ah ayey qaadatay in 27kaas qoraal laga xusho qoraalladii jiray oo markaa hal buug laga dhigo.
 
+[[Category:Axdiga Cusub]]
+[[Category:Masiixiyad]]
+
 [[ang:Nīwu Gecȳþnes]]
 [[ar:عهد جديد]]
 [[ast:Nuevu Testamentu]]
