[[cs:Kategorie:Nový zákon]]

--- a/Category:Axdiga_Cusub.mw
+++ b/Category:Axdiga_Cusub.mw
@@ -1,1 +1,29 @@
 [[Category:Masiixiyad]]
+
+[[cs:Kategorie:Nový zákon]]
+[[da:Kategori:Det Nye Testamente]]
+[[de:Kategorie:Neues Testament]]
+[[en:Category:New Testament]]
+[[eo:Kategorio:Nova testamento]]
+[[es:Categoría:Nuevo Testamento]]
+[[et:Kategooria:Uus Testament]]
+[[fi:Luokka:Uusi testamentti]]
+[[fr:Catégorie:Nouveau Testament]]
+[[hr:Kategorija:Novi zavjet]]
+[[hsb:Kategorija:Knihi Noweho zakonja]]
+[[ia:Categoria:Nove Testamento]]
+[[it:Categoria:Nuovo Testamento]]
+[[ja:Category:新約聖書]]
+[[ka:კატეგორია:ახალი აღთქმა]]
+[[nds:Kategorie:Nieg Testament]]
+[[nl:Categorie:Nieuwe Testament]]
+[[nn:Kategori:Det nye testamentet]]
+[[no:Kategori:Det nye testamente]]
+[[pl:Kategoria:Nowy Testament]]
+[[pt:Categoria:Novo Testamento]]
+[[ro:Categorie:Noul Testament]]
+[[ru:Категория:Новый Завет]]
+[[sr:Категорија:Нови завет]]
+[[sv:Kategori:Nya Testamentet]]
+[[uk:Категорія:Новий Заповіт]]
+[[vi:Thể loại:Tân Ước]]
