[[am:Category:ክርስትና]]

--- a/Category:Masiixiyad.mw
+++ b/Category:Masiixiyad.mw
@@ -1,1 +1,88 @@
 [[Category:Diin]]
+
+[[am:Category:ክርስትና]]
+[[an:Categoría:Cristianismo]]
+[[ang:Category:Crīstendōm]]
+[[ar:تصنيف:مسيحية]]
+[[ast:Categoría:Cristianismu]]
+[[az:Kateqoriya:Xristianlıq]]
+[[bat-smg:Kateguorėjė:Krėkštiuonībė]]
+[[be-x-old:Катэгорыя:Хрысьціянства]]
+[[bg:Категория:Християнство]]
+[[bs:Kategorija:Kršćanstvo]]
+[[ca:Categoria:Cristianisme]]
+[[cdo:Category:Gĭ-dók-gáu]]
+[[ceb:Category:Kristyanismo]]
+[[cs:Kategorie:Křesťanství]]
+[[cu:Катигорї:Хрїстїаньство]]
+[[cy:Categori:Cristnogaeth]]
+[[da:Kategori:Kristendom]]
+[[de:Kategorie:Christentum]]
+[[el:Κατηγορία:Χριστιανισμός]]
+[[en:Category:Christianity]]
+[[eo:Kategorio:Kristanismo]]
+[[es:Categoría:Cristianismo]]
+[[et:Kategooria:Kristlus]]
+[[eu:Kategoria:Kristautasuna]]
+[[fi:Luokka:Kristinusko]]
+[[fo:Bólkur:Kristindómur]]
+[[fr:Catégorie:Christianisme]]
+[[frp:Catègorie:Cristianismo]]
+[[ga:Catagóir:Críostaíocht]]
+[[gl:Categoría:Cristianismo]]
+[[hak:Category:Kî-tuk-kau]]
+[[he:קטגוריה:נצרות]]
+[[hi:श्रेणी:ईसाई धर्म]]
+[[hr:Kategorija:Kršćanstvo]]
+[[hsb:Kategorija:Křesćanstwo]]
+[[ht:Kategori:Krisyanis]]
+[[hu:Kategória:Kereszténység]]
+[[ia:Categoria:Christianismo]]
+[[id:Kategori:Kristen]]
+[[io:Kategorio:Kristanismo]]
+[[is:Flokkur:Kristni]]
+[[it:Categoria:Cristianesimo]]
+[[ja:Category:キリスト教]]
+[[jv:Kategori:Kristen]]
+[[ka:კატეგორია:ქრისტიანობა]]
+[[ko:분류:기독교]]
+[[la:Categoria:Religio Christiana]]
+[[lb:Kategorie:Chrëschtentum]]
+[[li:Categorie:Christendom]]
+[[lt:Kategorija:Krikščionybė]]
+[[lv:Kategorija:Kristietība]]
+[[map-bms:Category:Kristen]]
+[[ms:Kategori:Kristian]]
+[[mt:Category:Kristjaneżmu]]
+[[my:Category:ခရစ္‌ယာန္‌ဘာသာ]]
+[[nds:Kategorie:Christendom]]
+[[nds-nl:Kattegerie:Christendom]]
+[[ne:Category:क्रिश्चियन धर्म]]
+[[nl:Categorie:Christendom]]
+[[nn:Kategori:Kristendom]]
+[[no:Kategori:Kristendom]]
+[[pl:Kategoria:Chrześcijaństwo]]
+[[pt:Categoria:Cristianismo]]
+[[ro:Categorie:Creştinism]]
+[[ru:Категория:Христианство]]
+[[scn:Catigurìa:Cristianèsimu]]
+[[sco:Category:Christianity]]
+[[simple:Category:Christianity]]
+[[sk:Kategória:Kresťanstvo]]
+[[sl:Kategorija:Krščanstvo]]
+[[sr:Категорија:Хришћанство]]
+[[sv:Kategori:Kristendom]]
+[[sw:Category:Ukristo]]
+[[tet:Kategoria:Kristianizmu]]
+[[th:หมวดหมู่:คริสต์ศาสนา]]
+[[tr:Kategori:Hristiyanlık]]
+[[tt:Törkem:Xristianlıq]]
+[[uk:Категорія:Християнство]]
+[[vi:Thể loại:Kitô giáo]]
+[[vls:Categorie:Christndom]]
+[[wa:Categoreye:Crustinnisse]]
+[[yi:קאַטעגאָריע:קריסטנטום]]
+[[yo:Category:Kirisẹ́ńdọ̀mù]]
+[[zh:Category:基督教]]
+[[zh-min-nan:Category:Ki-tok-kàu]]
+[[zh-yue:Category:基督教]]
