*Empty MediaWiki Message*

--- a/Ciise.mw
+++ b/Ciise.mw
@@ -17,7 +17,7 @@ Ciise markii uu soddon jirsaday ayuu bilaabay fidinta diinta, saddex sano ka dib
 
 {{gumud}}
 
-[[Category:Diin]]
+[[Category:Masiixiyad]]
 [[Category:Islaam]]
 
 [[af:Jesus van Nasaret]]
