--- a/Ciise.mw
+++ b/Ciise.mw
@@ -2,7 +2,7 @@
 
 Ciise calayhi asalaam waxa uu ahaa nabi eebe u dirsaday reer banii israaiil oo hadda yahuuda ay laakiin imika iyaga iyo kiristanku ay ka dhigtan ilaah taasi waa baadil iyo beebeen.
 
-'''Ciise''' (Iesus) : ° -7/-4 ; + 30/+33 : Sayid Ciise Masiix : [[Diinta]] [[Kiristaanka]].
+'''Ciise''' (Iesus) : ° -7/-4 ; + 30/+33 : Sayid Ciise Masiix : [[Diin|Diinta]] [[Kiristaanka]].
 (يسوع)
 
 Ciise Masiix waxa uu ku dhashay Baytulaxam oo ku taal dhaulka ay Falastiiniyiintu degaan dhowr sano ka hor bilowgii taariikhda miilaadiga.
