--- a/Axdiga_Cusub.mw
+++ b/Axdiga_Cusub.mw
@@ -1,3 +1,5 @@
+[[Image:BiblenCh ubt.jpeg|thumb|Axdiga Cusub]]
+
 Axdiga Cusub waa qaybta labaad ee baybalka oo ka ka kooban 27 cutub.
 Waxa ugu horreeya afarta injiilood oo isugu xiga sidatan: Mateeyos, Maarkos, Luuqa, iyo Yooxannaa. Ka dibna Hawlihii Rasuullada iyo 14 dhambaal oo uu Paulos diray iyo 7 dhambaal oo ay qaar kale qoreen ayaa la raaciyey. Waxa intaas dheer cutubka Muujintii oo lagu xiray.
 
