[[fr:Al-Albâni]]

--- a/Sheekh_Maxamed_Naasiruddiin_Al-Albaani.mw
+++ b/Sheekh_Maxamed_Naasiruddiin_Al-Albaani.mw
@@ -53,5 +53,6 @@ Sheekh Albaani wuxuu dhintey maalin sabti ah bishuna ahayd Jumaadil-aakhira 22ki
 [[ar:محمد ناصر الدين الألباني]]
 [[de:Muhammad Nasiruddin al-Albani]]
 [[en:Muhammad Nasiruddin al-Albani]]
+[[fr:Al-Albâni]]
 [[id:Muhammad Nashiruddin Al-Albani]]
 [[sq:Muhammad Nasiruddin al-Albani]]
