--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,10 +1,10 @@
+[[Image:DamascusMerjeh.jpg|thumb|right|Magaalada dimishiq oo ah caasimada wadanka Suuriya]]
+[[Image:Damascus-National-Museum.JPG|thumb|right|museom ka dimishq.]]
+[[Image:Damascus by night.JPG|thumb|right|Magaalada Dimshq oo laga soo sawiray buurta loo yaqaano Qasioun]]
+
 Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa naa دمشق(Dimashq) waxaan loo yaqaanaaa  mar marka qaar (ash-Shām)(الشام). Waxayna tahay caasimada dalka [[Suuriya]]. Waxayna kamid tahay wadama ugu taariikhda dheer ee aduunka. Dadka kunool waxay gaarayaan 4.5 milyan. Dadka ku nool magalada dimishq 75% waxaa weeye Sunni muslim ah. Magaalda dimishq waxaa ku yaal in ka badan  kun 1,000 misaajid. Misaajidka ugu caasan waxaa weeye masjid Umayyad Mosque. Waxaa kale oo ku nool magaalada dad haysta diinta Christian ka sidoo kale axaa ku ala dhowr kaniisado.
 
-[[Image:DamascusMerjeh.jpg|thumb|right|Magaalada dimishiq oo ah caasimada wadanka Suuriya]]
-
-[[Image:Damascus-National-Museum.JPG|thumb|right|museom ka  dimishq.]]
-
-[[Image:Damascus by night.JPG|thumb|right|Magaalada Dimshq oo laga soo sawiray buurta loo yaqaano Qasioun]]
+[[Category:Aasiya]]
 
 [[am:ደማስቆ]]
 [[ar:دمشق]]
