*Empty MediaWiki Message*

--- a/Aasiya.mw
+++ b/Aasiya.mw
@@ -2,12 +2,13 @@
 
 *[[Ciraaq]]
 *[[Hindiya]]
-*[[Yaman]]
-*[[Shiinaha]]
-*[[Turkki]]
-*[[Ruush]]
-*[[Sri Lanka]]
 *[[Jabaan]]
+*[[Ruush]]
+*[[Shiinaha]]
+*[[Sri Lanka]]
+*[[Suuriya]]
+*[[Turkki]]
+*[[Yaman]]
 
 [[Category:Qaaradaha]]
 [[Category:Aasiya]]
