*Empty MediaWiki Message*

--- a/Suuriya.mw
+++ b/Suuriya.mw
@@ -1,5 +1,5 @@
 [[Image:LocationSyria.svg|thumb|Suuriya]]
-[[Image:Courtyard2(js).jpg|thumb|Suuriya]]
+[[Image:Peristyl House Palmyra Syria.JPG|thumb|Suuriya]]
 
 Suuriya : [[Aasiya]]
 
