[[ga:An tSiria]]

--- a/Suuriya.mw
+++ b/Suuriya.mw
@@ -9,3 +9,79 @@ Suuriya : [[Aasiya]]
 
 [[en:Syria]]
 [[fr:Syrie]]
+[[ga:An tSiria]]
+[[gl:Siria - سورية]]
+[[got:𐍃𐌰𐌿𐍂𐌾𐌰]]
+[[he:סוריה]]
+[[hi:सीरिया]]
+[[hr:Sirija]]
+[[hsb:Syriska]]
+[[ht:Siri]]
+[[hu:Szíria]]
+[[hy:Սիրիա]]
+[[id:Suriah]]
+[[ilo:Siria]]
+[[io:Siria]]
+[[is:Sýrland]]
+[[it:Siria]]
+[[ja:シリア]]
+[[ka:სირია]]
+[[kab:Surya]]
+[[kk:Сүрия]]
+[[ko:시리아]]
+[[ku:Sûrî]]
+[[kw:Syri]]
+[[la:Syria]]
+[[lb:Syrien]]
+[[li:Syrië]]
+[[lij:Sciria]]
+[[ln:Sirí]]
+[[lt:Sirija]]
+[[lv:Sīrija]]
+[[ml:സിറിയ]]
+[[mn:Сири]]
+[[mr:सिरीया]]
+[[ms:Syria]]
+[[nah:Siriyān]]
+[[nds:Syrien]]
+[[nl:Syrië]]
+[[nn:Syria]]
+[[no:Syria]]
+[[nov:Siria]]
+[[oc:Siria]]
+[[os:Сири]]
+[[pam:Syria]]
+[[pl:Syria]]
+[[pms:Siria]]
+[[ps:سوريه]]
+[[pt:Síria]]
+[[qu:Sirya]]
+[[ro:Siria]]
+[[ru:Сирия]]
+[[sa:सिरिया]]
+[[scn:Siria]]
+[[se:Syria]]
+[[sh:Sirija]]
+[[simple:Syria]]
+[[sk:Sýria]]
+[[sl:Sirija]]
+[[sq:Siria]]
+[[sr:Сирија]]
+[[sv:Syrien]]
+[[sw:Syria]]
+[[ta:சிரியா]]
+[[te:సిరియా]]
+[[tg:Сурия]]
+[[th:ประเทศซีเรีย]]
+[[tl:Syria]]
+[[tr:Suriye]]
+[[udm:Сирия]]
+[[uk:Сирія]]
+[[ur:شام]]
+[[uz:Suriya]]
+[[vi:Syria]]
+[[vo:Süriyän]]
+[[wo:Siiri]]
+[[yi:סיריע]]
+[[zh:叙利亚]]
+[[zh-min-nan:Su-lī-a]]
