*Empty MediaWiki Message*

--- a/Suuriya.mw
+++ b/Suuriya.mw
@@ -1,4 +1,4 @@
-[[Image:LocationSyria.svg|thumb|Suuriya]]
+[[Image:Carte de la Syrie FR.png|thumb|Suuriya]]
 [[Image:Peristyl House Palmyra Syria.JPG|thumb|Suuriya]]
 
 Suuriya : [[Aasiya]]
