--- a/Axdiga_Cusub.mw
+++ b/Axdiga_Cusub.mw
@@ -1,7 +1,7 @@
 [[Image:BiblenCh ubt.jpeg|thumb|Axdiga Cusub]]
 
 '''Axdiga Cusub''' waa qaybta labaad ee baybalka oo ka ka kooban 27 cutub.
-Waxa ugu horreeya afarta injiilood oo isugu xiga sidatan: Mateeyos, Maarkos, Luuqa, iyo Yooxannaa. Ka dibna Hawlihii Rasuullada iyo 14 dhambaal oo uu Paulos diray iyo 7 dhambaal oo ay qaar kale qoreen ayaa la raaciyey. Waxa intaas dheer cutubka Muujintii oo lagu xiray.
+Waxa ugu horreeya afarta [[injiil]]ood oo isugu xiga sidatan: Mateeyos, Maarkos, Luuqa, iyo Yooxannaa. Ka dibna Hawlihii Rasuullada iyo 14 dhambaal oo uu Paulos diray iyo 7 dhambaal oo ay qaar kale qoreen ayaa la raaciyey. Waxa intaas dheer cutubka Muujintii oo lagu xiray.
 
 Muddo saddex qarni ah ayey qaadatay in 27kaas qoraal laga xusho qoraalladii jiray oo markaa hal buug laga dhigo.
 
