*Empty MediaWiki Message*

--- a/Injiil.mw
+++ b/Injiil.mw
@@ -1,1 +1,1 @@
-Erayga '''Injiil''' macnihiisu waa ''war wanaagsan'' ama ''bishaaro''. Inkasta oo mararka qaarkood Axdiga Cusub [[Media:Example.ogg]]
+Erayga '''Injiil''' macnihiisu waa ''war wanaagsan'' ama ''bishaaro''. Inkasta oo mararka qaarkood Axdiga Cusub [[Media:gospel.ogg]]
