*Empty MediaWiki Message*

--- a/Injiil.mw
+++ b/Injiil.mw
@@ -1,1 +1,1 @@
-Erayga '''Injiil''' macnihiisu waa ''war wanaagsan'' ama ''bishaaro''. Inkasta oo mararka qaarkood Axdiga Cusub lagu magcaabo Injiil, haddana waxaa si gaar ah eraygan loogu yeeraa mid walba oo ka mid ah afarta qoraal ee ugu horreeya Axdiga Cusub
+Erayga '''Injiil''' macnihiisu waa ''war wanaagsan'' ama ''bishaaro''. Inkasta oo mararka qaarkood Axdiga Cusub lagu magcaabo Injiil, haddana waxaa si gaar ah eraygan loogu yeeraa mid walba oo ka mid ah afarta qoraal ee ugu horreeya Axdiga Cusub oo kala ah
