*Empty MediaWiki Message*

--- a/Af_Soomaali.mw
+++ b/Af_Soomaali.mw
@@ -1,6 +1,6 @@
-Af-soomaligu waa luqad aad u fudud, waxaa looga hadlaa wadanka [[soomaaliya]] oo ku yaala qaaradda [[afrika]]. wadankaas ooa y ku nool yihiin dad aad u badan oo dhamaantood ku hadlaan luqada afsoomaliga. Af-soomaaliga waxaa la qoray Sanadkii [[1974]]kii,wakhtigaas oo uu xukumayey wadanka soomaaliya [[Maxamed Siyaad Barre]] oo wadanka ku qabsaday afgambi ciidan. Af-soomaaliga waxaa lagu qoraa xuruufta laatiiniga ah. Qoraalkii Af-soomaaliga waxaa ka qayb qaatay Aqoonyahano soomaaliyeed oo aad u fara badan. higaadda Af-soomaligu waa sidan'''(B T J X KH D R S SH DH C G F Q K L M N W H Y )'''.
+Af-soomaliga waxaa looga hadlaa wadanka [[soomaaliya]] oo ku yaala qaaradda [[afrika]]. Af-soomaaliga waxaa la qoray Sanadkii [[1972]]kii. Af-soomaaliga waxaa lagu qoraa xuruufta laatiiniga ah. Qoraalkii Af-soomaaliga waxaa ka qayb qaatay Aqoonyahano soomaaliyeed oo aad u fara badan. Xarfaha higaadda Af-soomaligu waa sidan'''(B T J X KH D R S SH DH C G F Q K L M N W H Y )'''.
 
-Af-Soomaaliga waxaa looga hadlaa dalalka [[Soomaaliya]], [[Kenya]], [[Itoobiya]] iyo [[Jabuuti]].
+Af-Soomaaliga waxaa sidoo kale looga hadlaa qaybo ka mid ah dalalka [[Kenya]], [[Itoobiya]] iyo [[Jabuuti]].
 
 {| class="wikitable"
 ! Français || Af-Soomaali || Prononciation standard
