*Empty MediaWiki Message*

--- a/Af_Soomaali.mw
+++ b/Af_Soomaali.mw
@@ -38,7 +38,7 @@ Af-Soomaaliga waxaa sidoo kale looga hadlaa qaybo ka mid ah dalalka [[Kenya]], [
 | jour       || maalin-ta||
 |}
 
-[[Category:Afafka]]
+[[:Category:Afafka]] 
 
 [[am:ሶማልኛ]]
 [[ar:لغة صومالية]]
