Replacing page with '#redirect[Afafka]]'

--- a/Category:Luqadaha.mw
+++ b/Category:Luqadaha.mw
@@ -1,128 +1,1 @@
-Boggan waxaa lagu soo qaadan doonnaa luuqaddaha kala duwan ee aduunka looga hadlo:
-
-* [[af-Soomaali]]
-* [[Af-Faransiis]]
-* [[Ingiriis]]
-* [[Af-Turki]]
-* [[Af-Shiine]]
-* [[Af-Carabi]]
-
-[[af:Kategorie:Taal]]
-[[als:Kategorie:Sproch]]
-[[am:Category:ቋንቋዎች]]
-[[an:Categoría:Luengas]]
-[[ang:Category:Sprǣc]]
-[[ar:تصنيف:لغات]]
-[[ast:Categoría:Llingües]]
-[[ay:Categoría:Aru]]
-[[az:Kateqoriya:Dillər]]
-[[bar:Kategorie:Sproch]]
-[[bat-smg:Kateguorėjė:Kalbas]]
-[[bcl:Kategorya:Mga tataramon]]
-[[be:Катэгорыя:Мовы]]
-[[be-x-old:Катэгорыя:Мовы]]
-[[bg:Категория:Езици]]
-[[bh:Category:भाषा]]
-[[bm:Catégorie:Kan]]
-[[br:Rummad:Yezhoù ar bed]]
-[[bs:Kategorija:Jezici]]
-[[ca:Categoria:Llengües]]
-[[ce:Тоба:Меттанаш]]
-[[cs:Kategorie:Jazyky]]
-[[csb:Kategòrëjô:Jãzëczi swiata]]
-[[cu:Катигорї:Ѩзыци]]
-[[cv:Категори:Чĕлхесем]]
-[[cy:Categori:Ieithoedd]]
-[[da:Kategori:Sprog]]
-[[de:Kategorie:Sprache]]
-[[el:Κατηγορία:Γλώσσες]]
-[[en:Category:Languages]]
-[[eo:Kategorio:Lingvo]]
-[[es:Categoría:Lenguas]]
-[[et:Kategooria:Keeled]]
-[[eu:Kategoria:Hizkuntzak]]
-[[fa:رده:زبان‌ها]]
-[[fi:Luokka:Kielet]]
-[[fiu-vro:Katõgooria:Keeleq]]
-[[fo:Bólkur:Mál]]
-[[fr:Catégorie:Langue]]
-[[frp:Catègorie:Lengoua]]
-[[fur:Categorie:Lenghis]]
-[[fy:Kategory:Taal]]
-[[ga:Catagóir:Teangacha]]
-[[gd:Category:Cànain]]
-[[gl:Categoría:Linguas do mundo]]
-[[gu:Category:ભાષાઓ]]
-[[he:קטגוריה:שפות]]
-[[hr:Kategorija:Jezici]]
-[[hsb:Kategorija:Rěče]]
-[[hu:Kategória:Nyelvek]]
-[[ia:Categoria:Linguas]]
-[[id:Kategori:Bahasa]]
-[[io:Kategorio:Lingui]]
-[[is:Flokkur:Tungumál]]
-[[it:Categoria:Lingue]]
-[[ja:Category:言語]]
-[[jbo:Category:bangu]]
-[[ka:კატეგორია:ენები]]
-[[kab:Taggayt:Tutlayin]]
-[[ko:분류:언어]]
-[[ku:Kategorî:Ziman]]
-[[kw:Category:Yeth]]
-[[la:Categoria:Linguae]]
-[[lb:Kategorie:Sproochen]]
-[[li:Categorie:Tale]]
-[[ln:Catégorie:Lokótá]]
-[[lt:Kategorija:Kalbos]]
-[[lv:Kategorija:Valodas]]
-[[mk:Категорија:Светски Јазици]]
-[[ms:Kategori:Bahasa]]
-[[mt:Category:Lingwa]]
-[[na:Category:Ekakairũ]]
-[[nds:Kategorie:Spraak]]
-[[nds-nl:Kattegerie:Taol]]
-[[ne:Category:भाषा]]
-[[nl:Categorie:Taal]]
-[[nn:Kategori:Språk]]
-[[no:Kategori:Språk]]
-[[nrm:Category:Langue]]
-[[oc:Categoria:Lenga]]
-[[om:Category:Afaan]]
-[[or:Category:ଭାଷା]]
-[[os:Категори:Æвзæгтæ]]
-[[pdc:Kategorie:Schprooche]]
-[[pl:Kategoria:Języki świata]]
-[[pt:Categoria:Línguas]]
-[[rm:Category:Linguas]]
-[[ro:Categorie:Limbi]]
-[[ru:Категория:Языки]]
-[[sc:Category:Limbas]]
-[[sco:Category:Leid]]
-[[se:Category:Gielat]]
-[[sh:Category:Jezici]]
-[[simple:Category:Languages]]
-[[sk:Kategória:Jazyky]]
-[[sl:Kategorija:Jeziki]]
-[[sq:Category:Gjuha]]
-[[sr:Категорија:Језици]]
-[[sv:Kategori:Språk]]
-[[sw:Category:Lugha]]
-[[ta:பகுப்பு:மொழிகள்]]
-[[tet:Kategoria:Lian]]
-[[tg:Гурӯҳ:Забонҳо]]
-[[th:หมวดหมู่:ภาษา]]
-[[tk:Category:Diller]]
-[[tl:Category:Wika]]
-[[tpi:Category:Tokples]]
-[[tr:Kategori:Diller]]
-[[tt:Törkem:Tellär]]
-[[ty:Catégorie:Reo]]
-[[udm:Категория:Кылъёс]]
-[[uk:Категорія:Мови]]
-[[vi:Thể loại:Ngôn ngữ]]
-[[vls:Categorie:Toale]]
-[[wa:Categoreye:Lingaedjes]]
-[[yi:קאַטעגאָריע:שפראכן]]
-[[zea:Categorie:Taele]]
-[[zh:Category:语言]]
-[[zh-min-nan:Category:Gí-giân]]
+#redirect[Afafka]]
