*Empty MediaWiki Message*

--- a/Af-Ingiriisi.mw
+++ b/Af-Ingiriisi.mw
@@ -3,7 +3,7 @@
 
 Wadamada luqada ingiriiska looga hadlo sida afkooda hooyo oo kale ayaa ka mid ah [[Ingiriiska]], [[Irland]], [[Austaraaliya]], [[Newziland]], [[Maraykanka]], [[Canada]], [[Koonfur Afrika]], ...
 
-[[Category:Luqadaha]]
+[[Category:Afafka]]
 
 [[aa:Enqlizxsh - English]]
 [[af:Engels]]
