*Empty MediaWiki Message*

--- a/Bulsho.mw
+++ b/Bulsho.mw
@@ -1,1 +1,3 @@
 '''bulsho''' waxa la yidhaahdaakoox dad ah oo  ku nool meel cayiman,oo ay ka dhaxayso xidhiidh iyo cilaaqaad ay ku daneesanayaan qofka iyo bulshaduba.
+
+[[Category:Bulsho]]
