--- a/Calan.mw
+++ b/Calan.mw
@@ -1,3 +1,5 @@
 [[Image:Calanka_Soomaaliya.svg|thumb|Calanka [[Soomaaliya]] .]]
 
 '''Calan''' waa cad maro ah, taa soo lagu kor sawiray sawiro, loona isticmaalo astaan ahaan. Dalwalba oo aduunka wuxuu leeyahay calan u goor ah oo lagu aqoonsado.
+
+[[la:Evangelium]]
