--- a/Injiil.mw
+++ b/Injiil.mw
@@ -2,4 +2,31 @@ Erayga '''Injiil''' macnihiisu waa ''war wanaagsan'' ama ''bishaaro''. Inkasta o
 
 [[Category:Axdiga Cusub]]
 
+[[ar:إنجيل]]
+[[bg:Евангелие]]
+[[br:Aviel]]
+[[ca:Evangeli]]
+[[cs:Evangelium]]
+[[da:Evangelium]]
+[[de:Evangelium (Buch)]]
+[[en:Gospel]]
+[[eo:Evangelio]]
+[[es:Evangelio]]
+[[et:Evangeelium]]
+[[eu:Ebanjelio]]
+[[fi:Evankeliumi]]
+[[fr:Évangile]]
+[[fur:Vanzeli]]
+[[got:𐌰𐌹𐍅𐌰𐌲𐌲𐌴𐌻𐌾𐍉]]
+[[he:בשורות]]
+[[hr:Evanđelje]]
+[[hsb:Ewangelij]]
+[[ht:Levanjil]]
+[[hu:Evangélium]]
+[[ia:Evangelio]]
+[[id:Injil]]
+[[it:Vangelo]]
+[[ja:福音書]]
+[[jv:Injil]]
+[[ko:복음서]]
 [[la:Evangelium]]
