*Empty MediaWiki Message*

--- a/Category:Cilmiga_bulshada.mw
+++ b/Category:Cilmiga_bulshada.mw
@@ -1,1 +1,5 @@
-[[bulsho]] waxa la yidhaahdaakoox dad ah oo  ku nool meel cayiman,oo ay ka dhaxayso xidhiidh iyo cilaaqaad ay ku daneesanayaan qofka iyo bulshaduba.
+Dhowr laamaha waxbarashada ka mid ah oo darsa xaaladaha dadka iyo saamynta ay ku leeyihiin deegaanadooda ayaa laysku yiraahdaa Culuunta Bulshada. 
+
+Adeegsiga hababka cilmiga ku dhisan ayey laamahani kaga duwanaadeen kuwa kale ee ku saabsan dadka.
+
+Waxa maadooyinkan ka mid ah: dhaqaalaha, culuunta siyaasadda, iyo dembi-baarista,
