--- a/Category:Cilmiga_bulshada.mw
+++ b/Category:Cilmiga_bulshada.mw
@@ -1,5 +1,7 @@
-Dhowr laamaha waxbarashada ka mid ah oo darsa xaaladaha dadka iyo saamynta ay ku leeyihiin deegaanadooda ayaa laysku yiraahdaa Culuunta Bulshada. 
+Dhowr laamaha waxbarashada ka mid ah oo darsa xaaladaha dadka iyo saamynta ay ku leeyihiin deegaanadooda ayaa laysku yiraahdaa [[Culuunta Bulshada]]. 
 
 Adeegsiga hababka cilmiga ku dhisan ayey laamahani kaga duwanaadeen kuwa kale ee ku saabsan dadka.
 
-Waxa maadooyinkan ka mid ah: dhaqaalaha, culuunta siyaasadda, iyo dembi-baarista,
+Waxa maadooyinkan ka mid ah: [[dhaqaalaha]], [[culuunta siyaasadda]], iyo [[dembi-baarista]].
+
+[[gabayga caadiga]]
