*Empty MediaWiki Message*

--- a/Category:Cilmiga_bulshada.mw
+++ b/Category:Cilmiga_bulshada.mw
@@ -1,4 +1,4 @@
-Dhowr laamaha waxbarashada ka mid ah oo darsa xaaladaha dadka iyo saamynta ay ku leeyihiin deegaanadooda ayaa laysku yiraahdaa [[Culuunta Bulshada]]. 
+Dhowr laamaha waxbarashada ka mid ah oo darsa xaaladaha dadka iyo saamynta ay ku leeyihiin deegaanadooda ayaa laysku yiraahdaa '''culuunta bulshada'''. 
 
 Adeegsiga hababka cilmiga ku dhisan ayey laamahani kaga duwanaadeen kuwa kale ee ku saabsan dadka.
 
