--- a/Wikipedia:Hordhac.mw
+++ b/Wikipedia:Hordhac.mw
@@ -1,2 +1,2 @@
-{{Please leave this line alone}}
+{{Fadlan waxba hakabadalin Please leave this line alone}}
 <!-- Feel free to change the text below this line. No profanity, please. -->
