*Empty MediaWiki Message*

--- a/Wikipedia:Hordhac.mw
+++ b/Wikipedia:Hordhac.mw
@@ -1,2 +1,2 @@
-{{Fadlan waxba hakabadalin Please leave this line alone}}
+{{Please leave this line alone}}
 <!-- Feel free to change the text below this line. No profanity, please. -->
