*Empty MediaWiki Message*

--- a/Maxamed_Faarax_Caydiid.mw
+++ b/Maxamed_Faarax_Caydiid.mw
@@ -1,5 +1,47 @@
-[[Image:General Mohammed Farrah Aidid.jpg|thumb|200px|right|Mohammed Farrah Aidid]]
-'''Maxamed Faarax Caydiid''' ('''Mohammed Farrah Aidid''') : 15 [[diseembar]] [[1934]] – 1 [[agoosto]] [[1996]].
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" | '''Maxamed Faarax Caydiid'''<br>
+[[Image:Maxamed_Faarax_ceydiid.jpg|220px]]
+|-
+! colspan="2" style="background-color: #cae1ff; text-align: center;" | Madaxwaynihii 5aad ee [[Soomaliya]]
+|-
+! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+|-
+|-
+| colspan="2" style="text-align: center;" | 15 [[Juun]], [[1995]] ilaa 1 [[Agoosto]], [[1996]]
+|-
+! Ku xugay: 
+| [[Cali Mahdi Maxamed.]]
+|-
+! Xil ku wareejin
+| [[Xuseen Maxamed Faarax Caydiid.]]
+|-
+----
+|-
+! Dhashay:
+| 15 [[Diseembar]] [[1934]]
+|-
+! Ku dhashay:
+| [[Mudug]] [[Soomaaliya]]
+|-
+! Dhintay:
+| 2 [[Agoosto]] [[1996]](''Jaray 61sano'')
+|-
+! Kudhintay:
+| [[Muqdisho]], [[Soomaaliya]]
+|-
+! Diintiisa:
+| [[Islaam]]
+|-
+! Dalkiisa:
+| '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
+|-
+|}
+
+'''Maxamed Faarax Caydiid''' ('''Mohammed Farrah Aidid''') : 15 [[Diseembar]] [[1934]] – 1 [[Agoosto]] [[1996]].
 
 [[Soomaaliya]]
 
@@ -18,3 +60,5 @@
 [[sr:Мохамед Фарах Аидид]]
 [[sv:Mohammed Farah Aidid]]
 [[zh:穆罕默德·法拉赫·艾迪德]]
+
+<!----~~~~-->
