--- a/Maxamed_Faarax_Caydiid.mw
+++ b/Maxamed_Faarax_Caydiid.mw
@@ -14,7 +14,7 @@
 | colspan="2" style="text-align: center;" | 15 [[Juun]], [[1995]] ilaa 1 [[Agoosto]], [[1996]]
 |-
 ! Ku xugay: 
-| [[Cali Mahdi Maxamed.]]
+| [[Ali Mahdi Muhammad|Cali Mahdi Maxamed.]]
 |-
 ! Xil ku wareejin
 | [[Xuseen Maxamed Faarax Caydiid.]]
