--- a/Cali_Mahdi.mw
+++ b/Cali_Mahdi.mw
@@ -1,4 +1,47 @@
-Cali Mahdi wuxuu ku dhashay Tuulada Cadowuul ee ka tirsan gobalka Shabeelada Dhexe sanadaku markuu ahaa [[1939]]. Cali Mahdi asago jira dada 3 sano ayaa xamar reerkooda u soo gureen taasina fursad u siisay in wax ku barto isolaadkii Xamar ka jiray. Cali Mahdi [[1959]] ayaa Qahira waxuu u aaday wax barasho dhanka la dagaalanka Duumada "Anti Malaria" marku soo noqdayna wuxuu shaqo ka bilaabay Wasaarada Caafimadka ee wadanka Soomaliya.
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" | '''Cali Mahdi Maxamed'''<br>
+[[Image:Cali_Mahdi.jpg|220px]]
+|-
+! colspan="2" style="background-color: #c1cdc1; text-align: center;" | Madaxwaynihii 4aad ee [[Soomaliya]]
+|-
+! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+|-
+|-
+| colspan="2" style="text-align: center;" | [[Janaayo]], [[1995]] ilaa [[Juun]], [[1995]]
+|-
+! Ku xugay: 
+| [[Maxamed Siyaad Barre]].
+|-
+! Xil ku wareejin
+| [[Maxamed Faarax Caydiid]].
+|-
+----
+|-
+! Dhashay:
+| [[1938]]
+|-
+! <!--Ku dhashay:
+| [[]] [[]]-->
+<!--|-
+! Dhintay:
+| [[]] [[]]-->
+<!--|-
+! Kudhintay:
+| [[]], [[]]-->
+|-
+! Diintiisa:
+| [[Islaam]]
+|-
+! Dalkiisa:
+| '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
+|-
+|}
+
+''Cali Mahdi'' wuxuu ku dhashay Tuulada Cadowuul ee ka tirsan gobalka Shabeelada Dhexe sanadaku markuu ahaa [[1939]]. Cali Mahdi asago jira dada 3 sano ayaa xamar reerkooda u soo gureen taasina fursad u siisay in wax ku barto isolaadkii Xamar ka jiray. Cali Mahdi [[1959]] ayaa Qahira waxuu u aaday wax barasho dhanka la dagaalanka Duumada "Anti Malaria" marku soo noqdayna wuxuu shaqo ka bilaabay Wasaarada Caafimadka ee wadanka Soomaliya.
 
 Cali Mahdi wuxuu fursad u yeeshay in uu xubin ka noqdo barlamaanka Somaaliya sanadki [[1969]] asagoo noqday qofkii ugu dhalinyaraa ee xubin ka noqda barlamaanka Soomaliyeed.
 
