--- a/Cali_Mahdi.mw
+++ b/Cali_Mahdi.mw
@@ -41,7 +41,7 @@
 |-
 |}
 
-''Cali Mahdi'' wuxuu ku dhashay Tuulada Cadowuul ee ka tirsan gobalka Shabeelada Dhexe sanadaku markuu ahaa [[1939]]. Cali Mahdi asago jira dada 3 sano ayaa xamar reerkooda u soo gureen taasina fursad u siisay in wax ku barto isolaadkii Xamar ka jiray. Cali Mahdi [[1959]] ayaa Qahira waxuu u aaday wax barasho dhanka la dagaalanka Duumada "Anti Malaria" marku soo noqdayna wuxuu shaqo ka bilaabay Wasaarada Caafimadka ee wadanka Soomaliya.
+'''Cali Mahdi''' wuxuu ku dhashay Tuulada Cadowuul ee ka tirsan gobalka Shabeelada Dhexe sanadaku markuu ahaa [[1939]]. Cali Mahdi asago jira dada 3 sano ayaa xamar reerkooda u soo gureen taasina fursad u siisay in wax ku barto isolaadkii Xamar ka jiray. Cali Mahdi [[1959]] ayaa Qahira waxuu u aaday wax barasho dhanka la dagaalanka Duumada "Anti Malaria" marku soo noqdayna wuxuu shaqo ka bilaabay Wasaarada Caafimadka ee wadanka Soomaliya.
 
 Cali Mahdi wuxuu fursad u yeeshay in uu xubin ka noqdo barlamaanka Somaaliya sanadki [[1969]] asagoo noqday qofkii ugu dhalinyaraa ee xubin ka noqda barlamaanka Soomaliyeed.
 
