*Empty MediaWiki Message*

--- a/Cali_Mahdi.mw
+++ b/Cali_Mahdi.mw
@@ -36,7 +36,7 @@
 ! Diintiisa:
 | [[Islaam]]
 |-
-! Dalkiisa:
+! Dhalasho:
 | '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
 |-
 |}
