--- a/Maxamed_Faarax_Caydiid.mw
+++ b/Maxamed_Faarax_Caydiid.mw
@@ -36,7 +36,7 @@
 ! Diintiisa:
 | [[Islaam]]
 |-
-! Dalkiisa:
+! Dhalasho:
 | '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
 |-
 |}
