*Empty MediaWiki Message*

--- a/Siyaad_Barre.mw
+++ b/Siyaad_Barre.mw
@@ -1,4 +1,46 @@
-[[Image:Siad Barre.JPG|thumb|300px|Maxamed Siyaad Barre]]
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" | '''Maxamed Siyaad Barre'''<br>
+[[Image:Siyaad_Barre.jpg|220px]]
+|-
+! colspan="2" style="background-color: #cae1ff; text-align: center;" | Madaxwaynihii 3aad ee [[Soomaliya]]
+|-
+! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+|-
+|-
+| colspan="2" style="text-align: center;" | 21 [[Oktoobar]], [[1969]] ilaa 26 [[Janaayo]], [[1991]]
+|-
+! Ku xugay: 
+| [[Cabdirashiid Cali Sharma'arke]].
+|-
+! Xil ku wareejin:
+| [[Cali Mahdi Maxamed]].
+|-
+----
+|-
+! Dhashay:
+| [[1919]]
+|-
+! Ku dhashay:
+| [[Shilaabo]], [[Ogaadeenya]]
+|-
+! Dhintay:
+| 2 [[Janaayo]] [[1995]]
+|-
+! Kudhintay:
+| [[Leegos]], [[Naajeeriya]]
+|-
+! Diintiisa:
+| [[Islaam]]
+|-
+! Dhalasho:
+| '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
+|-
+|}
+
 
 [[Maxamed Siyaad Barre]], madaxweynihii dowlada [[soomaaliya]] [[21 Oktoobar]], [[1969]] ilaa [[26 Janaayo]], [[1991]]. [[Maxamed Siyaad Barre]] waxa uu ku dhashay magaalada Shilaabo ee dalka [[Itoobiya]] sanadka markuu ahaa [[1919]] ama [[1921]] wuxuuna ku geeriyooday magaalada [[laagos]] ee dalka Nayjeeriya [[2 Janaayo]], [[1995]].
 
