*Empty MediaWiki Message*

--- a/Siyaad_Barre.mw
+++ b/Siyaad_Barre.mw
@@ -25,13 +25,13 @@
 | [[1919]]
 |-
 ! Ku dhashay:
-| [[Shilaabo]], [[Ogaadeenya]]
+| [[Shilaabo]], [[Itoobiya]]
 |-
 ! Dhintay:
-| 26 [[Janaayo]] [[1995]]
+| 2 [[Janaayo]] [[1995]]
 |-
 ! Kudhintay:
-| [[Leegos]], [[Naajeeriya]]
+| [[Leegos]], [[Nayjeeriya]]
 |-
 ! Diintiisa:
 | [[Islaam]]
@@ -42,7 +42,7 @@
 |}
 
 
-[[Maxamed Siyaad Barre]], madaxweynihii dowlada [[soomaaliya]] [[21 Oktoobar]], [[1969]] ilaa [[26 Janaayo]], [[1991]]. [[Maxamed Siyaad Barre]] waxa uu ku dhashay magaalada Shilaabo ee dalka [[Itoobiya]] sanadka markuu ahaa [[1919]] ama [[1921]] wuxuuna ku geeriyooday magaalada [[laagos]] ee dalka Nayjeeriya [[2 Janaayo]], [[1995]].
+[[Maxamed Siyaad Barre]], madaxweynihii dowlada [[soomaaliya]] [[21 Oktoobar]], [[1969]] ilaa [[26 Janaayo]], [[1991]]. [[Maxamed Siyaad Barre]] waxa uu ku dhashay magaalada [[Shilaabo]] ee dalka [[Itoobiya]] sanadka markuu ahaa [[1919]]. Wuxuuna ku geeriyooday magaalada [[leegos]] ee dalka [[Nayjeeriya]] [[2 Janaayo]], [[1995]].
 
 '''Madaxweyneyaashii Soomaaliya'''
 *[[Cabdirashiid Cali Sharma'arke]] : [[1967]] - [[1969]]
