*Empty MediaWiki Message*

--- a/Siyaad_Barre.mw
+++ b/Siyaad_Barre.mw
@@ -42,7 +42,7 @@
 |}
 
 
-[[Maxamed Siyaad Barre]], madaxweynihii dowlada [[soomaaliya]] [[21 Oktoobar]], [[1969]] ilaa [[26 Janaayo]], [[1991]]. [[Maxamed Siyaad Barre]] waxa uu ku dhashay magaalada [[Shilaabo]] ee dalka [[Itoobiya]] sanadka markuu ahaa [[1919]]. Wuxuuna ku geeriyooday magaalada [[leegos]] ee dalka [[Nayjeeriya]] [[2 Janaayo]], [[1995]].
+[[Maxamed Siyaad Barre]], madaxweynihii dowlada [[soomaaliya]] [[21 Oktoobar]], [[1969]] ilaa [[26 Janaayo]], [[1991]]. [[Maxamed Siyaad Barre]] waxa uu ku dhashay magaalada [[Shilaabo]] ee dalka [[Itoobiya]] sanadka markuu ahaa [[1919]]. Wuxuuna ku geeriyooday magaalada [[leegos]] ee dalka [[Nayjeeriya]] 2 [[Janaayo]], [[1995]].
 
 '''Madaxweyneyaashii Soomaaliya'''
 *[[Cabdirashiid Cali Sharma'arke]] : [[1967]] - [[1969]]
