*Empty MediaWiki Message*

--- a/Cabdirashiid_Sharmaarke.mw
+++ b/Cabdirashiid_Sharmaarke.mw
@@ -1,4 +1,69 @@
-[[Cabdirashiid Cali Sharma'arke]] wuxuu dalka [[Soomaaliya]] madaxweyne ka noqday 10 [[Juun]] sanadkii [[1967]] waxaa la dillay 15kii [[Oktoobar]] [[1969kii]].
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" | '''Cabdirashiid Cali Sharma'arke'''<br>
+[[Image:Sharmaarke.jpg|220px]]
+|-
+! colspan="2" style="background-color: #cae1ff; text-align: center;" | Madaxwaynihii 3aad ee [[Soomaliya]]
+|-
+! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+|-
+|-
+| colspan="2" style="text-align: center;" | 10 [[Juun]], [[1967]] ilaa 15 [[Oktoobar]], [[1969]]
+|-
+! Ku xugay: 
+| [[Aadan Cabdulle Cusmaan]].
+|-
+! Xil ku wareejin:
+| [[Maxamed Siyaad Barre]].
+|-
+----
+|-
+! Dhashay:
+| [[1919]]
+|-
+! Ku dhashay:
+| [[Mudug]], [[Soomaaliya]]
+|-
+! Dhintay:
+| 15 [[Oktoobar]] [[1969]]
+|-
+! Kudhintay:
+| [[Sanaag]], [[Soomaaliya]]
+|-
+! Diintiisa:
+| [[Islaam]]
+|-
+! Dhalasho:
+| '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
+|-
+|}
+
+
+'''Cabdirashiid Cali Sharma'arke''' wuxuu dalka [[Soomaaliya]] madaxweyne ka ahaa taariikhdu markey ahayd 10 [[Juun]] sanadkii [[1967]] waxaa la dillay 15kii [[Oktoobar]] [[1969]]kii.(''Allaha U naxariisto'')
+
+==Taariikh==
+
+'''Cabdirashiid Cali Sharma'arke''' wuxuu ku dhashay degmada Xaradheere ee gobolka [[Mudug]] [[sanad]]kii [[1919]]. 
+
+Wuxuu dugsiga [[Quraan]]ka iyo waxbarashadiisii dhameeyay sanadkii [[1936]]dii, wuxuu bilaabay in uu noqdo ganacsade ka dibna shaqaale ka shaqeeya howlaha Civil servant maamulkii talyaaniga ee maxmiyadda, wuxuu noloshiisa ku qaatay wixii intaas ka dambeeyay magaalada [[Muqdisho]]. 
+
+Wuxuu ka mid noqday ururkii [[Somali Youth League]](SYL) waxyar ka dib markii la aasaasay sanadkii [[1943]]dii, wuxuuna ku biirey maamulkii ingiriiska ee Soomaaliya [[British Administartion Civil Service]]. 
+
+Wuxuu waxbarashadiisii dugsiga sare dhameystay [[1953]]dii, isagoo weli ka shaqeynaya Civil service, wuxuuna helay Course Schoolership ah dalka [[Talyaani]]ga gaar ahaan Jaamacadda [[University of Rome]] “La Sapienza”, halkaas oo uu ka qalin jibiyay sanadku markuu ahaa [[1958]]dii, wuxuuna sanad ka dib ku soo laabtay dalka [[Soomaaliya]], ka dibna waxaa loo doortay in uu noqdo xubinka tirsan Golihii lagu magacaabi jirey [[Somali Legislative Assembly]]. 
+
+Markii ay Soomaaliya noqotay dal madaxbannaan bishii 1, [[Luuliyo]] [[19960]]kii, wuxuu noqday Ra’iisul wasaarihii ugu horreeyay ee ay yeelato dalka Jamhuuriyadda Soomaaliya. 
+
+Wuxuu markiiba bilaabay in uu dadaal u galo sidii uu guulo uga soo hoyn lahaa dhinaca arrimaha dibedda, wuxuuna dalka Ra’iisul wsaare ka ahaa illaa [[1964]]tii. 
+
+Ka dib doorashooyin dalka ka dhacay wuxuu mar kale noqday xubin ka tirsan baarlamaanka [[Soomaaliya]]. Sanadkii [[1967]]dii doorashooyin la qabtay laguna dooranayay madaxweyne cidda ka noqoneysa dalka ayaa loo doortay in uu dalka Madaxweyne ka noqdo, ka dib markii doorashooyinkii dhacay uu kaga guuleystay madaxweynihii xilka kaga horreeyay ee Soomaaliya MD. [[Aadan Cabdulle Cusmaan]] “Aadan cadde”, wuxuuna xafiiska kala wareegay isla sanadkaas oo ku beegan 10kii [[Juun]] [[1967]]kii. 
+
+Labo sano ka dib markii uu dalka Madaxweyne ka noqday ayaa askari ka tirsan ciidamadii ilaalada ka hayay uu toogasho ku dilay 15kii bishii [[Oktoobar]] [[1969]]kii, isagoo booqanaya gobolka [[Sanaag]] ee dalka [[Soomaaliya]] halkaas oo ay abaaro ka dhaceen. 
+
+Lix maalmood ka dib markii dilku dhacay ayay ciidamadii dalka talada xoog kula wareegeen iyadii weli lagu jiro baroordiiqda madaxweynahaasi la dilay. Waxaana 21kii [[Oktoobar]] [[1969]]kii dalka Madaxweyne ka noqday Allaha u naxariistee Sarreeye gaas [[Maxamed Siyaad Barre|Max’ed Siyaad Barre]] oo ahaa Taliyihii Ciidanka Xoogga dalka [[Soomaaliya|Soomaaliyeed]]. 
+
 
 [[Category:Siyaasada Soomaaliya]]
 [[Category:Shaqsiyadaad]]
