*Empty MediaWiki Message*

--- a/Cabdirashiid_Sharmaarke.mw
+++ b/Cabdirashiid_Sharmaarke.mw
@@ -63,6 +63,7 @@ Ka dib doorashooyin dalka ka dhacay wuxuu mar kale noqday xubin ka tirsan baarla
 Labo sano ka dib markii uu dalka Madaxweyne ka noqday ayaa askari ka tirsan ciidamadii ilaalada ka hayay uu toogasho ku dilay 15kii bishii [[Oktoobar]] [[1969]]kii, isagoo booqanaya gobolka [[Sanaag]] ee dalka [[Soomaaliya]] halkaas oo ay abaaro ka dhaceen. 
 
 Lix maalmood ka dib markii dilku dhacay ayay ciidamadii dalka talada xoog kula wareegeen iyadii weli lagu jiro baroordiiqda madaxweynahaasi la dilay. Waxaana 21kii [[Oktoobar]] [[1969]]kii dalka Madaxweyne ka noqday Allaha u naxariistee Sarreeye gaas [[Maxamed Siyaad Barre|Max’ed Siyaad Barre]] oo ahaa Taliyihii Ciidanka Xoogga dalka [[Soomaaliya|Soomaaliyeed]]. 
+[[Image:Sharmarke_iyo_JFK_1960.jpg|left|thumbnail|465px|Cabdirashiid Cali Sharmaarke - Madaxwaynaha Soomaaliya & [[John F. Kennedey]] - Madaxwaynaha [[Maraykanka]]. [[1960]]kii]].
 
 
 [[Category:Siyaasada Soomaaliya]]
