*Empty MediaWiki Message*

--- a/Cabdirashiid_Sharmaarke.mw
+++ b/Cabdirashiid_Sharmaarke.mw
@@ -13,7 +13,7 @@
 |-
 | colspan="2" style="text-align: center;" | 10 [[Juun]], [[1967]] ilaa 15 [[Oktoobar]], [[1969]]
 |-
-! Ku xugay: 
+! Xil kalawareeg: 
 | [[Aadan Cabdulle Cusmaan]].
 |-
 ! Xil ku wareejin:
