*Empty MediaWiki Message*

--- a/Siyaad_Barre.mw
+++ b/Siyaad_Barre.mw
@@ -13,7 +13,7 @@
 |-
 | colspan="2" style="text-align: center;" | 21 [[Oktoobar]], [[1969]] ilaa 26 [[Janaayo]], [[1991]]
 |-
-! Ku xugay: 
+! Xil kalawareeg:
 | [[Cabdirashiid Cali Sharma'arke]].
 |-
 ! Xil ku wareejin:
