*Empty MediaWiki Message*

--- a/Cali_Mahdi.mw
+++ b/Cali_Mahdi.mw
@@ -13,7 +13,7 @@
 |-
 | colspan="2" style="text-align: center;" | [[Janaayo]], [[1995]] ilaa [[Juun]], [[1995]]
 |-
-! Ku xugay: 
+! Xil kalawareeg:
 | [[Maxamed Siyaad Barre]].
 |-
 ! Xil ku wareejin
