*Empty MediaWiki Message*

--- a/Maxamed_Faarax_Caydiid.mw
+++ b/Maxamed_Faarax_Caydiid.mw
@@ -16,7 +16,7 @@
 ! Xil kalawareeg:
 | [[Ali Mahdi Muhammad|Cali Mahdi Maxamed.]]
 |-
-! Xil ku wareejin
+! Xil ku wareejin:
 | [[Xuseen Maxamed Faarax Caydiid.]]
 |-
 ----
