*Empty MediaWiki Message*

--- a/Aadan_Daar.mw
+++ b/Aadan_Daar.mw
@@ -1,4 +1,47 @@
-Madaxweyne [[Aadan Cabdulle Cusmaan]] '''"Aadan Cadde"''' Waxaa uu ku dhashey  magaalada [[Beledweyne]] ee dalka [[Soomaaliya]] sanadkii [[1908]] wuxuuna ku geeriyoodey magaalada [[Nairobi]] ee dalka [[Kenya]] 8 [[Juun]] [[2007]]. Wuxuu waxbarashadiisii dugsiyada Qur'aanka, dugsiyada hoose, dhexe iyo sareba ku qaatay magaalada [[Muqdisho]]. 
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" | '''Aadan Cabdulle Cusmaan''' <br> ''Aadan cadde''
+[[Image:Aadan_Cade.jpg|220px]]
+|-
+! colspan="2" style="background-color: #cae1ff; text-align: center;" | Madaxwaynihii 1aad ee [[Soomaliya]]
+|-
+! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+|-
+|-
+| colspan="2" style="text-align: center;" | 1 [[Luuliyo]], [[1960]] ilaa 10 [[Juun]], [[1967]]
+|-
+! Xil kalawareeg: 
+| Qofna
+|-
+! Xil ku wareejin:
+| [[Cabdirashiid Cali Sharma'arke]].
+|-
+----
+|-
+! Dhashay:
+| [[1908]]
+|-
+! Ku dhashay:
+| [[Beledweyne]], [[Soomaaliya]]
+|-
+! Dhintay:
+| 8 [[Juun]] [[2007]]
+|-
+! Kudhintay:
+| [[Neyroobi]], [[Kenya]]
+|-
+! Diintiisa:
+| [[Islaam]]
+|-
+! Dhalasho:
+| '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
+|-
+|}
+
+Madaxweyne '''Aadan Cabdulle Cusmaan''' '''"Aadan Cadde"''' Waxaa uu ku dhashey  magaalada [[Beledweyne]] ee dalka [[Soomaaliya]] sanadkii [[1908]] wuxuuna ku geeriyoodey magaalada [[Neyroobi]] ee dalka [[Kenya]] 8 [[Juun]] [[2007]]. Wuxuu waxbarashadiisii dugsiyada Qur'aanka, dugsiyada hoose, dhexe iyo sareba ku qaatay magaalada [[Muqdisho]]. 
 Wuxuu wax ka bartay maamulka dowladnimo, wuxuuna sameyay dhaqdhaqaaq ganacsi intii uusan ku biirin ka hor xisbigii Leegada ee [[SYL]] bishii [[Febraayo]] sanadkii 1944. Sanadkii 1946 wuxuu ka mid noqday xubnihii maamulka ee xisbigaas, waxaa loo doortay in uu noqdo xoghayaha xisbigaas ee degmada [[Beledweyne]].
 
 Wuxuu sanadkii [[1951]] noqday maamulihii gobolka [[Mudug]], halkaas oo uu wakiil buuxdana uga ahaa xisbigii Leegada illaa laga soo gaaro sanadkii 1953. Sanadkii 1953 waxaa loo doortay in uu noqdo ku xigeenka maamulkii maxmiyadda ee loo yaqaanay ''Territorial Council'', sidoo kale [[1954]] waxaa loo doortay  guddoomiyihii xisbiga Leegada xilkaasina uu hayay illaa laga soo gaaro bishii [[Febraayo]] 1956. Bishii [[Maajo]] sanadkii 1958 waxaa loo doortay mar kale xilka ugu sarreeya ee xisbigii Leegada iyo guddoomiyihii golihii lagu magacaabi jirey '''''Somali Legislative Assembly''''', xilkaasina uu hayay illaa 1dii bishii [[Luuliyo]] sanadkii [[1960]].
