*Empty MediaWiki Message*

--- a/Cabdirashiid_Sharmaarke.mw
+++ b/Cabdirashiid_Sharmaarke.mw
@@ -39,6 +39,10 @@
 ! Dhalasho:
 | '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
 |-
+! Ururka:
+| [[Somali Youth League]](SYL)
+|-
+
 |}
 
 
