*Empty MediaWiki Message*

--- a/Aadan_Daar.mw
+++ b/Aadan_Daar.mw
@@ -39,6 +39,9 @@
 ! Dhalasho:
 | '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
 |-
+! Ururka:
+| [[Somali Youth League]](SYL)
+|-
 |}
 
 Madaxweyne '''Aadan Cabdulle Cusmaan''' '''"Aadan Cadde"''' Waxaa uu ku dhashey  magaalada [[Beledweyne]] ee dalka [[Soomaaliya]] sanadkii [[1908]] wuxuuna ku geeriyoodey magaalada [[Neyroobi]] ee dalka [[Kenya]] 8 [[Juun]] [[2007]]. Wuxuu waxbarashadiisii dugsiyada Qur'aanka, dugsiyada hoose, dhexe iyo sareba ku qaatay magaalada [[Muqdisho]]. 
