*Empty MediaWiki Message*

--- a/Cabdullaahi_Yuusuf.mw
+++ b/Cabdullaahi_Yuusuf.mw
@@ -1,4 +1,45 @@
-Waxa uu ku dhashay Gaalkacyo, [[Puntland]] – [[Somaaliya]] bishii Diseenbar [[1934]] kii. Waxaa u dhaxda marwo Xaawa Abdi Samatar oo ay isu dhaleen afar caruur ah: Maxamed, Maryan, Khadiija iyo Axmed 
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" | '''Cabdullaahi Yuusuf Axmed'''<br>
+[[Image:Abdullahi_Yusuf_Ahmed.jpg|250px]]
+|-
+! colspan="2" style="background-color: #c1cdc1; text-align: center;" | Madaxwaynaha [[Soomaliya]]
+|-
+! colspan="2" style="text-align: center;" | Xafiiska intoo joogay
+|-
+|-
+| colspan="2" style="text-align: center;" | 14 [[Oktoobar]], [[2004]] ilaa '''hada'''
+|-
+! Xil kalawareeg:
+| [[Cabdiqaasim Salaad Xassan]].
+<!--|-
+! Xil ku wareejin
+| [[]].-->
+|-
+! Dhashay:
+| 15 [[Diseembar]] [[1934]]
+|-
+! Ku dhashay:
+|[[Gaalkacyo]], [[Soomaaliya]]
+<!--|-
+! Dhintay:
+| [[]] [[]]-->
+<!--|-
+! Kudhintay:
+| [[]], [[]]-->
+|-
+! Diintiisa:
+| [[Islaam]]
+|-
+! Dhalasho:
+| '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
+|-
+|}
+
+'''Cabdullaahi Yuusuf Axmed''' Waxa uu ku dhashay Gaalkacyo, [[Puntland]] – [[Somaaliya]] bishii [[Diseenbar]] [[1934]] kii. Waxaa u dhaxda marwo Xaawa Abdi Samatar oo ay isu dhaleen afar caruur ah: Maxamed, Maryan, Khadiija iyo Axmed 
 
 ==WAXBARASHADA ==
 
